--- a/app/src/main/res/menu/plant_tracker_ui.xml
+++ b/app/src/main/res/menu/plant_tracker_ui.xml
@@ -1,8 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/individual_plant_menu">
+    <group>
+        <item
+            android:id="@+id/action_rename"
+            android:checkable="false"
+            android:enabled="true"
+            android:orderInCategory="100"
+            android:title="@string/action_rename"
+            android:visible="true"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/action_change_start_date"
+            android:checkable="false"
+            android:enabled="true"
+            android:orderInCategory="100"
+            android:title="@string/action_change_start_date"
+            android:visible="true"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/action_change_flower_date"
+            android:checkable="false"
+            android:enabled="true"
+            android:orderInCategory="100"
+            android:title="@string/action_change_flower_date"
+            android:visible="true"
+            app:showAsAction="never" />
+    </group>
+    <group>
+        <item
+            android:id="@+id/action_delete_plant"
+            android:checkable="false"
+            android:enabled="true"
+            android:orderInCategory="100"
+            android:title="@string/action_delete"
+            android:visible="true"
+            app:showAsAction="never" >
+            <menu>
+                <item
+                    android:id="@+id/action_delete_plant_really"
+                    android:checkable="false"
+                    android:enabled="true"
+                    android:orderInCategory="100"
+                    android:title="@string/action_delete_really"
+                    android:visible="true"
+                    app:showAsAction="never" />
+            </menu>
+        </item>
+    </group>
+
 </menu>
