Added about dialog, properly attributed icon creator.

--- a/app/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
+++ b/app/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
@@ -10,6 +10,10 @@
             android:id="@+id/nav_add_plant"
             android:icon="@drawable/ic_add"
             android:title="Add Plant" />
+        <item
+            android:id="@+id/nav_about_plant_tracker"
+            android:icon="@drawable/ic_about"
+            android:title="About Plant Tracker" />
     </group>
 
     <item android:title="Communicate">
