--- a/app/src/main/res/layout/plant_recordable_tile.xml
+++ b/app/src/main/res/layout/plant_recordable_tile.xml
@@ -7,14 +7,13 @@
 
     <TextView
         android:id="@+id/observEventTypeTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:gravity="top"
-        android:paddingLeft="15dp"
+        android:paddingLeft="8dp"
         android:text="WFO"
         android:textColor="@color/colorPrimary"
         android:textSize="14sp" />
