--- a/app/src/main/res/layout/plant_list_tile.xml
+++ b/app/src/main/res/layout/plant_list_tile.xml
@@ -4,6 +4,24 @@ android:layout_width="fill_parent"
 android:layout_height="?android:attr/listPreferredItemHeight"
 android:padding="6dip" >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/archivedTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:alpha="0.75"
+            android:gravity="right|center_vertical"
+            android:paddingRight="5dp"
+            android:text="Archived"
+            android:visibility="visible" />
+    </RelativeLayout>
+
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
